src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@font-face { 
  font-family: "Museo Moderno"; 
  src: url("../../public/fonts/museoModerno.ttf"); 
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

p {
  @apply: pb-2;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.highlight {
  @apply md:hover:text-yellow-300 md:hover:scale-105 transition cursor-pointer;
}

.enlarge {
  @apply hover:scale-105 transition cursor-pointer;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hide-scrollbar {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.tooltip-container .tooltip {
  visibility: hidden;
  cursor: default;
}
.tooltip-container:hover .tooltip {
  visibility: visible;
}

.wire-box {
  @apply border-white border rounded-lg p-1;
}
.wire-button {
  @apply rounded-full hover:bg-white/25 py-1 px-3;
}

.section {
  @apply  flex flex-col items-center gap-8;
}

.project-text {
  @apply leading-7;
}
.project-text li:not(:last-child) {
  @apply mb-2 pb-2 border-b border-b-white/50;
}
.project-text p {
  @apply mb-3;
}

.longTitle {
  font-size: 3rem;
}
.shortTitle {
  font-size: 4rem;
}
@media (min-width: 768px) {
  .longTitle {
    font-size: 6rem;
  }
  .shortTitle {
    font-size: 8rem;
  }
}

